Allow compiling with enable_print_preview=false

Earlier the warning shows an "unused variable" which is only used when
enable_print_preview is true. So enclose the variable definition
as well to avoid the compilation warning.

BUG=609723

Review-Url: https://codereview.chromium.org/1958593003
Cr-Commit-Position: refs/heads/master@{#392247}

Former-commit-id: aefb7f695c0cfb750974c8662fe7db6f6da91693