chrome/browser/extensions/api/cloud_print_private/cloud_print_private_api.cc
@@ -17,7 +17,9 @@ namespace extensions {
 
 namespace {
 
+#if defined(ENABLE_PRINT_PREVIEW)
 const char kErrorIncognito[] = "Cannot access in incognito mode";
+#endif
 
 CloudPrintTestsDelegate* g_instance = nullptr;
 
